[package]
name = "kaboom"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
rdev = "0.5.0"
rfd = "0.11"
eframe = { version = "0.27", features = ["default"] }
[profile.release]
opt-level = 3
codegen-units = 1 